--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-
 <body>
     <nav>
         <div class="nav-wrapper">
@@ -16,99 +15,97 @@
                 <a class="brand-logo">Feed Yo Face   <small>Sweet Food Baby App</small></a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="">Favorites</a></li>
-                    <li><a href="editPantry.html">Edit Pantry</a></li>
-                    <li class="active"><a href="index.html">Home</a></li>
+                	<li class="active"><a href="index.html">Home</a></li>
+                	<li><a href="">Favorites</a></li>
+                    <li><a href="">Amazon Cart</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
-                    <li><a href="">Favorites</a></li>
-                    <li><a href="editPantry.html">Edit Pantry</a></li>
-                    <li class="active"><a href="index.html">Home</a></li>
+                	<li class="active"><a href="index.html">Home</a></li>	
+                	<li><a href="">Favorites</a></li>
+                    <li><a href="">Amazon Cart</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col s12 l7">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/pantry.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">View Pantry
-						    <i class="material-icons right"></i>
-						</span>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Pantry Inventory
-						    <i class="material-icons right">close</i>
-						</span>
-                        <table class="bordered">
-                            <thead>
-                                <tr>
-                                    <th>Ingredient</th>
-                                    <th>Quantity</th>
-                                    <th>Unit</th>
-                                    <th>Cook Wit Deez</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                        <a class="waves-effect waves-light btn blue-grey darken-1">Add to Mixing Bowl</a>
-                    </div>
+    <div class="row">
+        <div class="col s12 l7">
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="assets/images/legumbres.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">View Pantry
+					    <i class="material-icons right"></i>
+					</span>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Pantry Inventory
+					    <i class="material-icons right">close</i>
+					</span>
+                    <table class="bordered">
+                        <thead>
+                            <tr>
+                                <th>Ingredient</th>
+                                <th>Quantity</th>
+                                <th>Unit</th>
+                                <th>Cook Wit Deez</th>
+                                <th>Remove Item</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                    <a class="waves-effect waves-light btn blue-grey darken-1">Add to Mixing Bowl</a>
                 </div>
             </div>
-        	<div class="col s12 l5">
-            	<div class="card blue-grey darken-1">
-            	    <div class="card-content white-text">
-            	        <span class="card-title">Mixing Bowl</span>
-            	        <form>
-            	        	<div class ="col s12" id="ingredientList">
-								<label>Ingredients</label>
-								<ul class="ingredientList">
-								</ul>
-							</div>
-							<div class ="col s12">
-								<label>Please Exclude (separate with commas)</label>
-								<input type="text" name="exclude" class="exclude">
-							</div>
-							<div class ="col s12">
-								<label>Max Calories</label>
-								<input type="number" name="calories" class="calories" value="2000">
-							</div>
-							<div class="browser-default col s6">
-							    <select>
-							    	<option value="" disabled selected>Choose Type</option>
-							    	<option value="main+course" class="type">Main Course</option>
-									<option value="side+dish" class="type">Side Dish</option>
-									<option value="dessert" class="type">Dessert</option>
-									<option value="appetizer" class="type">Appetizer</option>
-									<option value="salad" class="type">Salad</option>
-							    </select>
-							</div>
-							<div class="browser-default col s6">
-							    <select>
-							    	<option value="" disabled selected>Choose Diet</option>
-							    	<option value="pescetarian" class="diet">Pescetarian</option>
-									<option value="lacto+vegetarian" class="diet">Lacto Vegetarian</option>
-									<option value="ovo+vegetarian" class="diet">Ovo Vegetarian</option>
-									<option value="vegan" class="diet">Vegan</option>
-									<option value="paleo" class="diet">Paleo</option>
-							    </select>
-							</div>
-            	        </form>
-            	    </div>
-            	    <div class="col s12">
-            	    	<div class="card-action">
-            	    	    <a href="#" id="select">Search for Recipes</a>
-            	    	</div>
-            	    </div>
-            	</div>
-            </div>
         </div>
-    </div>
+    	<div class="col s12 l5">
+        	<div class="card mixingBowl">
+        	    <div class="card-content white-text">
+        	        <span class="card-title">Mixing Bowl</span>
+        	        <form>
+        	        	<div class ="col s12" id="ingredientList">
+							<label>Ingredients</label>
+							<ul class="ingredientList">
+							</ul>
+						</div>
+						<div class ="col s12">
+							<label>Please Exclude <small>(separate with commas)</small></label>
+							<input type="text" name="exclude" class="exclude">
+						</div>
+						<div class ="col s12">
+							<label>Max Calories</label>
+							<input type="number" name="calories" class="calories" value="2000">
+						</div>
+						<div class="browser-default col s6">
+						    <select>
+						    	<option value="" disabled selected>Choose Type</option>
+						    	<option value="main+course" class="type">Main Course</option>
+								<option value="side+dish" class="type">Side Dish</option>
+								<option value="dessert" class="type">Dessert</option>
+								<option value="appetizer" class="type">Appetizer</option>
+								<option value="salad" class="type">Salad</option>
+						    </select>
+						</div>
+						<div class="browser-default col s6">
+						    <select>
+						    	<option value="" disabled selected>Choose Diet</option>
+						    	<option value="pescetarian" class="diet">Pescetarian</option>
+								<option value="lacto+vegetarian" class="diet">Lacto Vegetarian</option>
+								<option value="ovo+vegetarian" class="diet">Ovo Vegetarian</option>
+								<option value="vegan" class="diet">Vegan</option>
+								<option value="paleo" class="diet">Paleo</option>
+						    </select>
+						</div>
+        	        </form>
+        	    </div>
+        	    <div class="col s12">
+        	    	<div class="card-action">
+        	    	    <a href="#" id="select">Search for Recipes</a>
+        	    	</div>
+        	    </div>
+        	</div>
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
