Edited Card Sizes

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
         	</div>
         </div>
     </div>
-    <div class="row">
-        <div class="col s12 m6">
+    <div class="row" id="recipe-cards">
+        <div class="col s12 m4">
             <div class="card medium">
                 <div class="card-image">
                 	<img src="https://spoonacular.com/recipeImages/scrambled-egg-sandwich-to-go-266974.jpg">
